# swanstation

./: CMakeLists.txt  Makefile.libretro  TODO  libretro.osx.def
.github/workflows/: build-autostate.yml
dep/: CMakeLists.txt
src/common/: CMakeLists.txt  audio_stream.cpp  audio_stream.h  bitfield.h  bitutils.h  byte_stream.cpp  byte_stream.h  cd_image.cpp  cd_image.h  cd_image_bin.cpp  cd_image_chd.cpp  cd_image_cue.cpp  cd_image_ecm.cpp  cd_image_m3u.cpp  cd_image_mds.cpp  cd_image_memory.cpp  cd_image_pbp.cpp  cd_image_ppf.cpp  cd_subchannel_replacement.cpp  cd_subchannel_replacement.h  cd_xa.cpp  cd_xa.h  cue_parser.cpp  cue_parser.h  error.cpp  error.h  fifo_queue.h  file_system.cpp  file_system.h  heap_array.h  image.cpp  image.h  iso_reader.cpp  iso_reader.h  jit_code_buffer.cpp  jit_code_buffer.h  log.cpp  log.h  md5_digest.cpp  md5_digest.h  (+18 more)
src/core/: analog_controller.cpp  analog_controller.h  analog_joystick.cpp  analog_joystick.h  bios.cpp  bios.h  bus.cpp  bus.h  cdrom.cpp  cdrom.h  cdrom_async_reader.cpp  cdrom_async_reader.h  cheats.cpp  cheats.h  controller.cpp  controller.h  cpu_code_cache.cpp  cpu_code_cache.h  cpu_core.cpp  cpu_core.h  cpu_core_private.h  cpu_recompiler_code_generator.cpp  cpu_recompiler_code_generator.h  cpu_recompiler_code_generator_aarch32.cpp  cpu_recompiler_code_generator_aarch64.cpp  cpu_recompiler_code_generator_generic.cpp  cpu_recompiler_code_generator_x64.cpp  cpu_recompiler_register_cache.cpp  cpu_recompiler_register_cache.h  cpu_types.cpp  (+83 more)
tools/: regen_d3d12_dxbc.py  regen_d3d_common_dxbc.py  regen_vulkan_spirv.py
(+1184 files in other folders)
